--- a/static/auth.html
+++ b/static/auth.html
@@ -35,7 +35,7 @@
             box-sizing: border-box;
         }
         button {
-            background-color: #007bff;
+            background-color: #0b74c1;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -44,7 +44,7 @@
             width: 100%;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #095ea8;
         }
         .message {
             margin-top: 10px;
@@ -76,7 +76,7 @@
         }
         .tab.active {
             background-color: white;
-            border-bottom: 2px solid #007bff;
+            border-bottom: 2px solid #0b74c1;
         }
         .tab-content {
             display: none;
