--- a/static/forms.html
+++ b/static/forms.html
@@ -4,34 +4,147 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/index.css">
+    <link rel="stylesheet" href="/static/forms.css">
     <title>Формы учета</title>
-    <style> body { min-height: calc(100vh - 66px); background: #f8fafc; }</style>
 </head>
 <body>
-    <div class="top-tabs" role="navigation">
-        <div class="top-tabs-inner container">
-            <ul class="top-tab-bar" role="tablist">
-                <li class="top-tab-item" data-href="/static/index.html">Работа с файлами</li>
-                <li class="top-tab-item" data-href="/static/workflow.html">Схема учета</li>
-                <li class="top-tab-item" data-href="/static/forms.html">Формы учета</li>
-            </ul>
-            <div class="top-user-info" aria-hidden="true">
-                <div class="user-avatar" title="Пользователь">A</div>
-                <div class="user-name">Александр</div>
+
+<div class="top-tabs" role="navigation">
+    <div class="top-tabs-inner container">
+        <ul class="top-tab-bar" role="tablist">
+            <li class="top-tab-item" data-href="/static/index.html">Работа с файлами</li>
+            <li class="top-tab-item" data-href="/static/workflow.html">Схема учета</li>
+            <li class="top-tab-item active" data-href="/static/forms.html">Формы учета</li>
+        </ul>
+        <div class="top-user-info" aria-hidden="true">
+            <div class="user-avatar" title="Пользователь">A</div>
+            <div class="user-name">Александр</div>
+        </div>
+    </div>
+</div>
+
+<div class="content-container">
+
+    <h1 class="page-title">Формы учета</h1>
+
+    <!-- Описание -->
+    <div class="mode-description">
+        <h2>Описание режима</h2>
+        <p>
+            В данном разделе вы можете вести журналы учета, добавлять записи,
+            просматривать данные и выгружать журналы в формате Excel.
+        </p>
+    </div>
+
+    <!-- Выбор журнала -->
+    <div class="card">
+        <div class="card-title">Выбор журнала</div>
+
+        <div class="form-row single">
+            <div class="form-group">
+                <label>Журнал учета</label>
+                <select id="journalSelect">
+                    <option value="">Выберите журнал</option>
+                    <option value="journal1"> 1 - Журнал учета носителей конфиденциальной информации</option>
+                    <option value="journal2"> 2 - Журнал учета изданных конфиденциальных документов</option>
+                    <option value="journal3"> 3 - Журнал учета изданных конфиденциальных распорядительных документов</option>
+                    <option value="journal4"> 4 - Журнал учета изданных конфиденциальных протоколов</option>
+                    <option value="journal5"> 5 - Журнал учета изданных конфиденциальных документов выделенного хранения</option>
+                    <option value="journal6"> 6 - Журнал учета поступивших конфиденциальных пакетов</option>
+                    <option value="journal7"> 7 - Журнал учета поступивших конфиденциальных документов</option>
+                    <option value="journal8"> 8 - Перечень поступивших документов, направленных на исполнение без доклада руководителю</option>
+                    <option value="journal9"> 9 - Журнал учета передачи конфиденциальных документов</option>
+                </select>
             </div>
         </div>
     </div>
 
-    <!-- Содержимое намеренно оставлено пустым -->
-    <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const items = document.querySelectorAll('.top-tab-item');
-        items.forEach(it => it.addEventListener('click', function(){ const href = this.getAttribute('data-href'); if (href) { window.location.href = href; } }));
-        const path = window.location.pathname || '/';
-        if (path.endsWith('/static/forms.html')) {
-            const el = document.querySelector('.top-tab-item[data-href="/static/forms.html"]'); if (el) el.classList.add('active');
-        }
+    <!-- Таблица -->
+    <div class="card">
+        <div class="card-title">Данные журнала</div>
+        <!-- ВРЕМЕННО ПУСТОТА (потом см. по 1.3) -->
+         <label>ВРЕМЕННО ПУСТОТА (потом см. по 1.3)</label>
+    </div>
+
+    <!-- Добавление записи -->
+    <div class="card hidden" id="addFormCard">
+        <div class="card-title">Добавить запись</div>
+
+        <div class="form-row">
+            <div class="form-group">
+                <label>Дата</label>
+                <input type="date" id="entryDate">
+            </div>
+
+            <div class="form-group">
+                <label>Наименование</label>
+                <input type="text" id="entryName" placeholder="Введите наименование">
+            </div>
+        </div>
+
+        <div class="form-row single">
+            <div class="form-group">
+                <label>Описание</label>
+                <textarea id="entryDesc" rows="3"
+                          placeholder="Введите описание записи"></textarea>
+            </div>
+        </div>
+
+        <div class="actions-row">
+            <button class="btn btn-primary" id="saveEntryBtn">Сохранить запись</button>
+        </div>
+    </div>
+
+    <!-- Действия -->
+    <div class="actions-row">
+        <button class="btn btn-primary" id="addEntryBtn">Добавить запись</button>
+        <button class="btn btn-outline" id="downloadBtn">Скачать журнал (xlsx)</button>
+    </div>
+
+</div>
+
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+
+    // Навигация
+    document.querySelectorAll('.top-tab-item').forEach(it => {
+        it.addEventListener('click', () => {
+            const href = it.getAttribute('data-href');
+            if (href) window.location.href = href;
+        });
     });
-    </script>
+
+    addEntryBtn.addEventListener('click', function () {
+        if (!currentJournal) {
+            alert('Сначала выберите журнал');
+            return;
+        }
+        addFormCard.classList.toggle('hidden');
+    });
+
+    saveEntryBtn.addEventListener('click', function () {
+        const date = document.getElementById('entryDate').value;
+        const name = document.getElementById('entryName').value;
+        const desc = document.getElementById('entryDesc').value;
+
+        if (!date || !name) {
+            alert('Заполните обязательные поля');
+            return;
+        }
+
+        const row = document.createElement('tr');
+        row.innerHTML = `
+            <td>${date}</td>
+            <td>${name}</td>
+            <td>${desc}</td>
+        `;
+        tableBody.appendChild(row);
+
+        addFormCard.classList.add('hidden');
+    });
+
+});
+</script>
+
 </body>
 </html>
